- Update to 0.10 - Add a secondary download site - Use ${PKGNAMEPREFIX} instead of py- inside DOCSDIR

--- a/textproc/py-pygments/Makefile
+++ b/textproc/py-pygments/Makefile
@@ -6,10 +6,11 @@
 #
 
 PORTNAME=	pygments
-PORTVERSION=	0.9
+PORTVERSION=	0.10
 #PORTREVISION=	0
 CATEGORIES=	textproc python
-MASTER_SITES=	CHEESESHOP
+MASTER_SITES=	CHEESESHOP \
+		http://nivi.interfree.it/distfiles/${PORTNAME}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	Pygments-${PORTVERSION}
 
@@ -21,7 +22,7 @@ USE_PYDISTUTILS=	easy_install
 PYDISTUTILS_PKGNAME=	Pygments
 
 .if !defined(NOPORTDOCS)
-DOCSDIR=	${PREFIX}/share/doc/py-${PORTNAME}
+DOCSDIR=	${PREFIX}/share/doc/${PKGNAMEPREFIX}${PORTNAME}
 FIND_DOCS=	. -type f
 MAN1=	pygmentize.1
 MANCOMPRESSED=	no
