--- a/x11/gnome-menus/Makefile
+++ b/x11/gnome-menus/Makefile
@@ -7,10 +7,9 @@
 #
 
 PORTNAME=	gnome-menus
-PORTVERSION=	2.22.1
+PORTVERSION=	2.22.2
 CATEGORIES=	x11 gnome
-MASTER_SITES=	${MASTER_SITE_GNOME}
-MASTER_SITE_SUBDIR=	sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+\.[0-9]+).*/\1/}
+MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome2
 
 MAINTAINER=	gnome@FreeBSD.org
