DISTNAME -> DISTFILES to make sure it works when examples are being downloaded too.
Submitted by:	Johannes 5 Joemann <joemann@beefree.free.de>

--- a/devel/asdlgen/Makefile
+++ b/devel/asdlgen/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	2.0.b20060323
 CATEGORIES=	devel haskell java
 MASTER_SITES=	http://moby.cs.uchicago.edu/downloads/ \
 		ftp://mirror.free.de/http/moby.cs.uchicago.edu/downloads/
-DISTNAME=	asdlGen
+DISTFILES=	asdlGen.tar.gz
 
 MAINTAINER=	joemann@beefree.free.de
 COMMENT=	Interoperable serializers for C,C++,Haskell,Icon,Java,ML
