NOPORTDOCS (r1.41) is not supported by the base release of fwbuilder. Mark the port BROKEN when NOPORTODOCS is specified.

--- a/security/fwbuilder-devel/Makefile
+++ b/security/fwbuilder-devel/Makefile
@@ -50,4 +50,8 @@ MAN1=		fwbuilder.1 \
 PORTDOCS=	*
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+.if defined(NOPORTDOCS)
+BROKEN=		NOPORTDOCS is incomplete in this port
+.endif
+.include <bsd.port.post.mk>
