--- a/security/libfwbuilder2/Makefile
+++ b/security/libfwbuilder2/Makefile
@@ -44,4 +44,8 @@ post-install:
 PORTDOCS=	*
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+.if defined(NOPORTDOCS)
+BROKEN=		NOPORTDOCS is incomplete in this port
+.endif
+.include <bsd.port.post.mk>
