--- a/audio/bmp-faad/Makefile
+++ b/audio/bmp-faad/Makefile
@@ -12,7 +12,7 @@ CATEGORIES=	audio
 MASTER_SITES=	SF/faac
 PKGNAMEPREFIX=	bmp-
 
-MAINTAINER=	ahze@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Beep Media Player (BMP) plugin for faad
 
 PATCH_DEPENDS=	${AUTOMAKE_DEPENDS} ${AUTOCONF_DEPENDS} ${LIBTOOL_DEPENDS}
