new port audio/akode-plugins-pulseaudio
        Attached is the port to build the Akode PulseAudio plugin,
        this plugin is a replacement for the recently retired Akode
        PolypAudio plugin.

        This plugin was created from the akode-pulseaudio.patch
        obtained from Fedora Core 6.

        aKode is a simple audio-decoding frame-work that provides
        a uniform interface to decode the most common audio-formats.
        It also has a direct playback option for a number of
        audio-outputs.

PR:             ports/121344
Submitted by:   Scot Hetzel <swhetzel@gmail.com>

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -20,6 +20,7 @@
     SUBDIR += akode-plugins-mpc
     SUBDIR += akode-plugins-mpeg
     SUBDIR += akode-plugins-oss
+    SUBDIR += akode-plugins-pulseaudio
     SUBDIR += akode-plugins-resampler
     SUBDIR += akode-plugins-xiph
     SUBDIR += alac
