Enable support for audio/akode-plugins-pulseaudio
PR:             ports/121344
Submitted by:   Scot Hetzel <swhetzel@gmail.com>

--- a/audio/akode/Makefile
+++ b/audio/akode/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	akode
 PORTVERSION=	2.0.2
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	audio kde
 MASTER_SITES=	${MASTER_SITE_GENTOO}
@@ -24,6 +25,7 @@ OPTIONS=	FFMPEG "FFMPEG decoder plugin" off \
 		MPC "Monkey's Audio decoder plugin" on \
 		MPEG "MPEG Audio (including mp3) plugin" on \
 		OSS "OSS output plugin" on \
+		PULSEAUDIO "Pulseaudio output plugin" off \
 		RESAMPLER "Resampler processing plugin" on \
 		XIPH "FLAC/Speex/Vorbis decoder plugin" on
 
@@ -60,6 +62,10 @@ RUN_DEPENDS+=	${LOCALBASE}/lib/libakode_mpeg_decoder.so:${PORTSDIR}/audio/akode-
 
 .if !defined(WITHOUT_OSS)
 RUN_DEPENDS+=	${LOCALBASE}/lib/libakode_oss_sink.so:${PORTSDIR}/audio/akode-plugins-oss
+.endif
+
+.if defined(WITH_PULSEAUDIO)
+RUN_DEPENDS+=	${LOCALBASE}/lib/libakode_polyp_sink.so:${PORTSDIR}/audio/akode-plugins-pulseaudio
 .endif
 
 .if !defined(WITHOUT_RESAMPLER)
