--- a/editors/Makefile
+++ b/editors/Makefile
@@ -118,6 +118,7 @@
     SUBDIR += openoffice.org-2
     SUBDIR += openoffice.org-2-RC
     SUBDIR += openoffice.org-2-devel
+    SUBDIR += openoffice.org-3
     SUBDIR += openoffice.org-3-RC
     SUBDIR += openoffice.org-3-devel
     SUBDIR += pdfedit
