--- a/www/drupal7/Makefile
+++ b/www/drupal7/Makefile
@@ -1,12 +1,12 @@
-# New ports collection makefile for:	drupal5
+# New ports collection makefile for:	drupal6
 # Date Created: 			12 Feb 2007
 # Whom:					Nick Hilliard <nick@foobar.org>
 #
 # $FreeBSD$
 #
 
-PORTNAME=	drupal5
-PORTVERSION=	5.7
+PORTNAME=	drupal6
+PORTVERSION=	6.2
 CATEGORIES=	www
 MASTER_SITES=	http://ftp.drupal.org/files/projects/
 DISTNAME=	drupal-${PORTVERSION}
@@ -15,17 +15,20 @@ DIST_SUBDIR=	drupal
 MAINTAINER=	nick@foobar.org
 COMMENT=	A database driven web content management system (CMS)
 
-DRUPAL5_PORT=	yes
+DRUPAL6_PORT=	yes
 
 USE_PHP=	gd pcre session xml mbstring
+IGNORE_WITH_PHP=4
 WANT_PHP_WEB=	yes
 
-OPTIONS+=	MYSQL "MySQL database support" on \
+OPTIONS+=	MYSQLI "MySQL Improved Extension database support" on \
+		MYSQL "MySQL database support" off \
 		PGSQL "PostgreSQL database support" off
 
 NO_BUILD=	yes
 DOCS=		CHANGELOG.txt INSTALL.txt LICENSE.txt MAINTAINERS.txt \
-		UPGRADE.txt INSTALL.mysql.txt INSTALL.pgsql.txt
+		UPGRADE.txt INSTALL.mysql.txt INSTALL.pgsql.txt \
+		COPYRIGHT.txt
 SUB_FILES+=	pkg-message
 PKGMESSAGE=	${WRKDIR}/pkg-message
 
@@ -33,6 +36,9 @@ PKGMESSAGE=	${WRKDIR}/pkg-message
 
 .if defined(WITH_MYSQL)
 USE_PHP+=	mysql
+.endif
+.if defined(WITH_MYSQLI)
+USE_PHP+=	mysqli
 .endif
 .if defined(WITH_PGSQL)
 RUN_DEPENDS+=	${LOCALBASE}/share/pear/DB.php:${PORTSDIR}/databases/pear-DB
@@ -43,7 +49,6 @@ do-install:
 	${MKDIR} ${DRUPAL_DIR}
 	${CP} ${WRKSRC}/.htaccess ${DRUPAL_DIR}
 	${CP} ${WRKSRC}/cron.php ${DRUPAL_DIR}
-	${MKDIR} ${DRUPAL_DIR}/files
 	${CP} -R ${WRKSRC}/includes ${DRUPAL_DIR}
 	${CP} ${WRKSRC}/index.php ${DRUPAL_DIR}
 	${CP} ${WRKSRC}/install.php ${DRUPAL_DIR}
@@ -55,9 +60,9 @@ do-install:
 	${MKDIR} ${DRUPAL_DIR}/sites/all
 	${CP} ${WRKSRC}/sites/all/README.txt ${DRUPAL_DIR}/sites/all/
 	${MKDIR} ${DRUPAL_DIR}/sites/default
-	${CP} ${WRKSRC}/sites/default/settings.php ${DRUPAL_DIR}/sites/default/settings.php-dist
-	@if [ ! -f ${DRUPAL_DIR}/sites/default/settings.php ]; then \
-		${CP} -p ${DRUPAL_DIR}/sites/default/settings.php-dist ${DRUPAL_DIR}/sites/default/settings.php ; \
+	${CP} ${WRKSRC}/sites/default/default.settings.php ${DRUPAL_DIR}/sites/default/default.settings.php-dist
+	@if [ ! -f ${DRUPAL_DIR}/sites/default/default.settings.php ]; then \
+		${CP} -p ${DRUPAL_DIR}/sites/default/default.settings.php-dist ${DRUPAL_DIR}/sites/default/default.settings.php ; \
 	fi
 	${CP} -R ${WRKSRC}/themes ${DRUPAL_DIR}
 	${CP} ${WRKSRC}/update.php ${DRUPAL_DIR}
@@ -73,5 +78,5 @@ do-install:
 post-install:
 	@${CAT} ${PKGMESSAGE}
 
-.include "${.CURDIR}/bsd.drupal.mk"
+.include "${.CURDIR}/../../www/drupal5/bsd.drupal.mk"
 .include <bsd.port.post.mk>
