--- a/www/drupal7/files/pkg-message.in
+++ b/www/drupal7/files/pkg-message.in
@@ -26,5 +26,5 @@ A typical configuration might read:
 Please see http://drupal.org/cron for important information on setting up
 periodic maintenance tasks in Drupal.
 
-For important information about upgrading from Drupal version 4, please see: 
-%%DRUPAL_DIR%%/doc/UPGRADE.txt
+For important information about upgrading from previous versions of Drupal, please 
+please see: %%DRUPAL_DIR%%/doc/UPGRADE.txt
