--- a/www/drupal4-attachment/Makefile
+++ b/www/drupal4-attachment/Makefile
@@ -15,7 +15,7 @@ COMMENT=	An alternative to Drupal's included upload module
 
 RUN_DEPENDS+=	${LOCALBASE}/${DRUPAL_MODDIR}/filemanager.module:${PORTSDIR}/www/drupal4-filemanager
 
-DRUPAL_MODULE=	yes
+DRUPAL4_MODULE=	yes
 MODULE_FILES=	attachment.install attachment.module
 DOC_FILES=	LICENSE.txt README.txt CREDITS INSTALL
 
