--- a/sysutils/webmin/Makefile
+++ b/sysutils/webmin/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	webmin
 PORTVERSION=	1.420
+PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.webmin.com/updates/:up \
 		${MASTER_SITE_SOURCEFORGE:S/$/:sf/} \
@@ -27,8 +28,7 @@ USE_PERL5=	yes
 USE_RC_SUBR=    webmin.sh
 SUB_LIST=	PERL5=${PERL}
 
-WEBMIN_MODULES=	bind8-1.410-6.wbm.gz \
-		status-1.410-2.wbm.gz
+WEBMIN_MODULES=
 
 post-extract:
 	@if [ "${WEBMIN_MODULES}" != "" ]; then \
