- Update to 20080526 - Create symlinks during the build: bsdsort and gnusort

--- a/textproc/bsdsort/Makefile
+++ b/textproc/bsdsort/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	sort
-PORTVERSION=	20080422
+PORTVERSION=	20080526
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 MASTER_SITE_SUBDIR=	gabor
@@ -18,16 +18,13 @@ COMMENT=	BSD-licensed version of sort from OpenBSD
 WRKSRC=		${WRKDIR}/${PORTNAME}
 MANCOMPRESSED=	yes
 MAN1=		sort.1
-PLIST_FILES=	bin/sort
 
 MAKE_ENV+=	BINDIR="${PREFIX}/bin" \
 		MANDIR="${MANPREFIX}/man/man" \
 		CATDIR="${MANPREFIX}/man/man"
 
-.include <bsd.port.pre.mk>
+post-install:
+	${LN} -s ${PREFIX}/bin/sort ${PREFIX}/bin/bsdsort
+	${LN} -s /usr/bin/sort ${PREFIX}/bin/gnusort
 
-.if ${OSVERSION} < 600000
-IGNORE=		is not supported on 5.X
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
