PHP_UML is a reverse-engineering package that scans PHP files and directories, and delivers an UML/XMI representation of the classes and packages found.
WWW: http://pear.php.net/package/PHP_UML/

PR:		ports/123935
Submitted by:	Wen Heping <wenheping at gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1864,6 +1864,7 @@
     SUBDIR += pear-PHP_CompatInfo
     SUBDIR += pear-PHP_Parser
     SUBDIR += pear-PHP_ParserGenerator
+    SUBDIR += pear-PHP_UML
     SUBDIR += pear-Pager
     SUBDIR += pear-PhpDocumentor
     SUBDIR += pear-Structures_DataGrid
