--- a/misc/zoneinfo/Makefile
+++ b/misc/zoneinfo/Makefile
@@ -5,8 +5,7 @@
 # $FreeBSD$
 
 PORTNAME=	zoneinfo
-DISTVERSION=	2008b
-PORTREVISION=	1
+DISTVERSION=	2008c
 CATEGORIES=	misc
 MASTER_SITES=	ftp://elsie.nci.nih.gov/pub/
 DISTNAME=	tzdata${DISTVERSION}
