--- a/devel/anjuta/Makefile
+++ b/devel/anjuta/Makefile
@@ -7,10 +7,10 @@
 #
 
 PORTNAME=	anjuta
-PORTVERSION=	2.4.1
-PORTREVISION=	1
+PORTVERSION=	2.4.2
 CATEGORIES=	devel gnome
-MASTER_SITES=	SF
+MASTER_SITES=	GNOME
+DIST_SUBDIR=	gnome2
 
 MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	Integrated Development Environment for C and C++
